apps/tachtit/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: forgejo.local.seyzahl.com
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - forgejo.local.seyzahl.com
      secretName: forgejo-tls
  rules:
    - host: forgejo.local.seyzahl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
